# weak_compiler

./: .clang-tidy  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Doxyfile  Makefile  README.md  gdb.sh  run.sh
lib/: CMakeLists.txt  Makefile  builtins.h  execution.h
lib/back_end/: back_end.c  back_end.h  code_gen.c  code_gen.h  elf.c  elf.h  emit.c  emit.h  eval.c  eval.h  gen.c  gen.h  risc_v.c  risc_v.h  risc_v_encode.h  x86_64.c  x86_64.h
lib/front_end/: ana.h  ana_fn.c  ana_type.c  ana_var.c  ast.c  ast.h  ast_dump.c  ast_storage.c  ast_storage.h  ast_type.c  ast_type.h  data_type.c  fn_storage.c  fn_storage.h  lex.c  lex.h  parse.c  parse.h  pp.c  pp.h  sema_lower.c  sema_type.c  tok.c  tok.h  tok_type.c  tok_type.h
lib/front_end/ana/: ana.h  ast_storage.c  ast_storage.h  const.c  const.h  dead_ana.c  fn_ana.c  fn_storage.c  fn_storage.h  type_ana.c  var_ana.c
lib/front_end/anal/: anal.h  ast_storage.c  const.c  dead_anal.c  fn_anal.c  fn_storage.c  type_anal.c  var_anal.c
lib/front_end/analysis/: analysis.h  ast_storage.c  ast_storage.h  fn_storage.c  fn_storage.h  functions_analysis.c  type_analysis.c  variable_use_analysis.c
lib/front_end/ast/: ast.c  ast.h  ast_array_access.c  ast_array_access.h  ast_array_decl.h  ast_binary.c  ast_break.c  ast_break.h  ast_char.c  ast_compound.c  ast_continue.c  ast_do_while.h  ast_dump.c  ast_dump.h  ast_for.h  ast_function_call.h  ast_function_decl.h  ast_lower.c  ast_node.c  ast_node.h  ast_return.h  ast_string.c  ast_symbol.c  ast_symbol.h  ast_type.c  ast_type.h  ast_unary.c  ast_unary.h  ast_var_decl.c  ast_var_decl.h  ast_while.h
lib/front_end/ast/lower/: range.c
lib/front_end/lex/: data_type.c  data_type.h  lex.c  lex.h  tok.c  tok.h  tok_type.c  tok_type.h
lib/front_end/parse/: parse.c  parse.h
lib/front_end/sema/: lower.c  sema.h  sema_lower.c  sema_type.c  type_implicit.c
lib/include/FrontEnd/AST/: AST.h  ASTArrayAccess.h  ASTArrayAccess.hpp  ASTArrayDecl.h  ASTArrayDecl.hpp  ASTBinary.h  ASTBinaryOperator.h  ASTBinaryOperator.hpp  ASTBool.h  ASTBooleanLiteral.h  ASTBooleanLiteral.hpp  ASTBreak.h  ASTBreakStmt.h  ASTBreakStmt.hpp  ASTChar.h  ASTCharLiteral.h  ASTCharLiteral.hpp  ASTCompound.h  ASTCompoundStmt.h  ASTCompoundStmt.hpp  ASTContinue.h  ASTContinueStmt.h  ASTContinueStmt.hpp  ASTDoWhile.h  ASTDoWhileStmt.h  ASTDoWhileStmt.hpp  ASTDump.h  ASTDump.hpp  ASTFloat.h  ASTFloatingPointLiteral.h  ASTFloatingPointLiteral.hpp  ASTFor.h  ASTForStmt.h  ASTForStmt.hpp  ASTFunctionCall.h  ASTFunctionCall.hpp  ASTFunctionDecl.h  ASTFunctionDecl.hpp  ASTFunctionPrototype.h  ASTFunctionPrototype.hpp  (+35 more)
lib/include/FrontEnd/Analysis/: ASTStorage.h  Analysis.h  Analyzer.h  DeadCodeAnalysis.h  FunctionAnalysis.h  TypeAnalysis.h  VariableUseAnalysis.h
lib/include/FrontEnd/Lex/: DataType.h  Lexer.h  Lexer.hpp  Token.h  Token.hpp  TokenType.h
lib/include/FrontEnd/Parse/: Parser.h  Parser.hpp
lib/include/Utility/: Compiler.h  Diagnostic.h  Diagnostic.hpp  EnumOstreamOperators.h  Files.h  Lexical.h  Uncopyable.h  Unmovable.h  Unreachable.h  VariantOverload.hpp
lib/include/middle_end/: ir.h  ir_dump.h  ir_gen.h  ir_storage.h
lib/include/utility/: alloc.h  compiler.h  crc32.h  diagnostic.h  hashmap.h  lexical.h  unreachable.h  vector.h
lib/middle_end/: ir.c  ir.h  ir_dump.c  ir_dump.h  ir_gen.c  ir_gen.h  ir_graph.c  ir_graph.h  ir_storage.c  ir_storage.h
lib/middle_end/ir/: ddg.c  ddg.h  dom.c  dom.h  dump.c  dump.h  gen.c  gen.h  graph.c  graph.h  ir.c  ir.h  ir_bin.c  ir_bin.h  ir_dump.c  ir_dump.h  ir_dump_bin.c  ir_dump_bin.h  ir_ops.c  ir_ops.h  meta.c  meta.h  regalloc.c  regalloc.h  ssa.c  ssa.h  storage.c  storage.h  type.c  type.h
lib/middle_end/opt/: arith.c  data_flow.c  dead.c  fold.c  motion.c  opt.h  reorder.c  unreachable.c
lib/rvjit/: rvjit.h  rvjit_emit.c
lib/src/Utility/: Diagnostic.cpp  EnumOstreamOperators.cpp  Files.cpp  Lexical.cpp
lib/src/back_end/: code_gen.c
lib/src/middle_end/: ir.c  ir_dump.c  ir_gen.c
lib/src/utility/: alloc.c  crc32.c  diagnostic.c  hashmap.c
lib/util/: alloc.c  alloc.h  compiler.h  crc32.c  crc32.h  diagnostic.c  diagnostic.h  hashmap.c  hashmap.h  io.c  io.h  lexical.c  lexical.h  unreachable.h  vector.h
lib/utility/: alloc.c  compiler.h  crc32.c  diagnostic.c  diagnostic.h  lexical.c  lexical.h
tests/: CMakeLists.txt  Makefile
tests/FrontEnd/: AnalysisTest.cpp  LexerTest.cpp  ParserTest.cpp  VariableUseAnalysisTest.cpp
tests/Fuzzer/: Fuzzer.cpp
tests/MiddleEnd/: CodeGenTest.cpp  TypeResolverTest.cpp
tests/MiddleEnd/Input/: CreateString.wl  ExpectErrorOnBoolFloatConversion.wl  ExpectErrorOnBoolIntConversion.wl  ExpectErrorOnIntBoolConversion.wl  ExpectErrorOnIntFloatConversion.wl  ExpectErrorUnknownFunctionCall.wl  ExpectErrorUnknownVariable.wl  ExpectErrorWrongFunctionArgumentsCount.wl  ExpectErrorWrongFunctionParameter.wl  ExpectErrorWrongUnaryOperand.wl
tests/Utility/: Fuzzer.cpp  SourceCodeReactor.cpp
tests/back_end/: back_end.c  back_end_test.c  elf.c  emit.c  eval.c  gen.c  risc_v.c  risc_v_encode.c  risc_v_encode_test.c  risc_v_instr.c  x86_64.c
tests/back_end/code_gen/: code_gen.c
tests/front_end/: ana.c  ast_dump.c  ast_type.c  data_type.c  parse.c  sema.c  tok.c
tests/front_end/ana/: ana.c  const.c
tests/front_end/anal/: anal.c  const.c
tests/front_end/analysis/: analysis.c  ast_storage.c
tests/front_end/ast/: ast_dump.c  ast_lower.c
tests/front_end/lex/: data_type.c  lex.c  tok.c
tests/front_end/parse/: parse.c
tests/front_end/sema/: lower.c  sema.c
tests/fuzz/: fuzz.c
tests/middle_end/code_gen/: array_ptr.wl  change_by_pointer.wl  cmp.wl  create_string.wl  empty_main_function.wl  factorial_using_arrays.wl  function_prototype.wl  nested_for.wl  nested_struct.wl  ret_sum_of_two_variables.wl  struct.wl
tests/middle_end/ir/: cfg.c  ddg.c  dom.c  dump.c  file_dump.c  gen.c  graph.c  ir_dump.c  ir_gen.c  ir_graph.c  regalloc.c  ssa.c
tests/middle_end/opt/: arith.c  dead.c  fold.c  opt.c
tests/utils/: alloc.c  crc32.c  diagnostic.c  lexical.c  report.c  test_utils.h
(+1249 files in other folders)
